fix alignment for tabs

--- a/WebApp/idscan/src/css/TabsPage.css
+++ b/WebApp/idscan/src/css/TabsPage.css
@@ -1,6 +1,8 @@
 .tabs {
 	background-color: white;
     font-size: 20px;
+	text-align: center;
+	width: 100vw;
 }
 
 .tab-panel {
